# WriteYourselfASceme

./: .gitignore  .stylish-haskell.yaml  scheme-interpreter.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-8.13/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.3-HBpqzXYRXJ933IT5Hc0L2H  hspec-core-2.4.3-AJmF76CegGE4OD4kmqTEph  hspec-discover-2.4.3-CG2f3yt4qi61oj48M1aJup  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  quickcheck-io-0.1.4-C5t3MfRsr5zrFam5nRAFy  random-1.1-9tceXaeYIMZ4JrKq20Egog  scheme-interpreter-0.1.0.0-JFS5auRCRjm1JEogNedKop  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG
.stack-work/install/x86_64-linux/lts-8.13/8.0.2/lib/x86_64-linux-ghc-8.0.2/scheme-interpreter-0.1.0.0-JFS5auRCRjm1JEogNedKop/: Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux/lts-8.13/8.0.2/pkgdb/: package.cache  scheme-interpreter-0.1.0.0-JFS5auRCRjm1JEogNedKop.conf
app/: Main.hs  REPL.hs
lispFiles/: useDefine.scm  useDefine.scm~
src/: Parser.hs
src/SchemeInterpreter/: Env.hs  Eval.hs  Interpreter.hs  LispVal.hs  Parser.hs  Runtime.hs  StdLib.hs
test/: Spec.hs
test/Test/SchemeInterpreter/: Eval.hs  Parser.hs
