name:                scheme-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scheme-interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1
                     , vector >= 0.11
  default-language:    Haskell2010

executable scheme-interpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme-interpreter
  default-language:    Haskell2010

test-suite scheme-interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.4
                     , QuickCheck >= 2.9
                     , scheme-interpreter
                     , parsec >= 3.1
                     , vector >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scheme-interpreter
